lab1/Test/L1-A-7-45.cmm
struct {
  struct eatqbUked AYoKXOcliT9z3N = Bw5dCqp7yiyu4zMD 
    = SqAO9 && F4KvcOK5li5HN == SnmLYY7PHmBw - ppxOCTuuArsGx 
    * - ! rV7O1 ( mWMND0QC1 , bjZ || q5GPOU != s1MpFmiZNT2 
    + dqY0WfLhr0dO54U_wYan [ i3c >= oVg3QTKFISb895hHSi 
    + wlnyFPVCyBriYp82C0K / aGMPx [ MLDqFWzCQtCx9xZ4Hp 
    = qoGaH || ! ( R < Rkk1PyOMCjgJ_zJhLk <= ! ! w0CPYoQMYCqr 
    * YUQHcmb_Z149A1kX9lDQ * ! - hubamK * 1435457295.194733022 
    ) ] * - - - 1091321416 . GXwU9zepPQpZpoWI74kC > oJRc2_lFeKfD2 
    ( ) ] . VtkMyy5WEKjOB6D4 ) / ZlTRSlu7fCjELq3Fkz ;
}lE85e_YfXzXVVGfGBHkG ( float wWzdU5 , int qCsgyi 
  [ 2062475752 ] ) {
}
int ;
int ;
int HFL 
;
int nPSaPcrrpEpGQK46qU 
;
struct mfQAZjdKH5C4CViIOX ;
struct u7sEYaU3a978jFhpW d , K4XDbZGpTCIpJ 

;
struct WFSqExbHJT {
};
int ;
int ;
int ;
int ftX9GAwFbjsFK143_rn ( ) {
  if ( YPpBr ) {
    if ( oZujHYmg )     while ( Xn8O4azENOvK )     rIQmhHo 
      ;

else     while ( Y )     TvwiJUDg ;


  }else   if ( hQUquz )   return gGsKKjdxUS3JGWO0B 
    ;


}
int EqFKK0Zwx 
;
int lIQU75Tkiw ( ) {
  while ( Rz9n5 ) {
    if ( a3qKM )     if ( RQ_ )     skURADQcVgekXSDDRE2Q 
      ;
else     if ( j29dwWbjBFcXn0klWiGI )     La ;
else {
      int I4JF4 ;
      int cFbzsox ;
      int ORRiqCoLmVbN3E6mX ;
      int aPRbwurHMHd4ZpBgR ;
      int JG4 , %_9VaWu ;
'      while ( HMz2TT1 )       if ( Jjwyk0jsl498vGMBVCnc 
        )       UOZnVk ;
else       ArmlBSKEgdD9Zew7d6 ;


    }


  }
}
